# robot_arm_ik

./: README.md
config/: rotateMaxData.txt
models/CAD/: 壳体02.STEP  底座.STEP  末端套筒.STEP  末端法兰.STEP  筒壁.STEP  筒壁支座.STEP
models/V-rep-model/: SIA_ARM_Trotsky_V-REP.ttm
models/sia_robot_meshes/dae/: 02.dae  03.dae  04.dae  base.dae  end-falan.dae  end-taotong.dae  tongbi.dae  tongbizhizuo.dae
models/sia_robot_meshes/output/sia_robot_description/: package.xml
models/sia_robot_meshes/output/sia_robot_description/launch/: sia_robot.launch  sia_robot_manual_angles.launch
models/sia_robot_meshes/output/sia_robot_description/urdf/: sia_robot.urdf
models/sia_robot_meshes/semantic_dae/: forearm_link.dae  wrist_1_link.dae  wrist_2_link.dae  wrist_3_link.dae
models/sia_robot_meshes/semantic_dae_for_gazebo/: base_link.dae
sia_arm_description/: CMakeLists.txt  package.xml
sia_arm_description/launch/: test.launch
sia_arm_description/meshes/: wrist_3_link.dae
sia_arm_description/test/: urdf_test.rviz
sia_arm_description/urdf/: sia_robot.urdf  sia_robot.urdf.xacro  sia_robot_fix.urdf.xacro  sia_robot_visual.urdf.xacro  sia_robot_visual_fix.urdf.xacro
trac_ik_examples/: CMakeLists.txt
trac_ik_examples/launch/: pr2_arm.launch  pr2_arm_test.launch  sia_arm_test.launch
trac_ik_examples/src/: ik_tests.cpp  sia_arm_test.cpp
